2008-05-20 Sean Swehla <smswehla@linux.vnet.ibm.com>

    * brokerOs.c, instance.c, support.c
    Fixed [ 1928541 ] sfcb binary interface memory leak on CMGetObjectPath
    Changed *alloc's of mutexes to use memAlloc/tracked memory

2008-05-19 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

    * constClass.c
    Fixed [ 1946202 ] getPropQualifier function attempts to free non-malloced mem
    (Based on patch from Nicholas Bofferding)

2008-05-09 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

    * Makefile.am
    * footprint.pl
	Added makefile rule and supporting script to do 
	disk and memory footprinting.

2008-05-07 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* configure.ac, sfcBroker.c, default.reg.in, cimXmlRequest.c, 
	Makefile.am:
	Fixed 1953683: allow sfcb to be built to support localconnect only
	(patch by Luong Nguyen-Duy)
	
2008-05-06 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* msgqueue.c:
	Fixed 1959063: "accept error" on provider unloading (LocalConnect)

2008-05-02 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c, providerMgr.c, msgqueue.c:
	Reversed original fix for 1919970, added new one
	(patch by Gokulakannan)

2008-05-01 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
    * indCIMXMLExport.c
    * indCIMXMLHandler.c
    fixed 1896550: Memory leak in exportIndication
    (patch by Tim Potter)

2008-04-30 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

    * providerDrv.c
    Fixed 1920539: sfcb crashes in getinstance
    (patch by Tim Potter)

2008-04-24 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c:
	Fixed 1951133: httpAdapter crashes if auth library can't be loaded
	(patch by Chris Abbey)

2008-04-23 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c:
	Fixed 1919970: Provider process not terminated after idle 
	(w/ LocalConnect) (patch by Luong Nguyen-Duy)

2008-04-17 Gary Readler  <gdr@us.ibm.com>

	* cimcClientSfcbLocal.c: